Red reverse for whitespaces in diff

--- a/.gitconfig
+++ b/.gitconfig
@@ -16,6 +16,7 @@
 	frag = magenta bold # line info
 	old = red # deletions
 	new = green # additions
+	whitespace = "red reverse"
 
 [color "status"]
 
