--- a/.gitconfig
+++ b/.gitconfig
@@ -176,6 +176,8 @@
 	unassume = update-index --no-assume-unchanged
 	# List all files that are assumed to be unchanged
 	assumed = !git ls-files -v | grep '^[hsmrck?]' | cut -c 3-
+	# List what was accomplished yesterdayish
+	standup = !"git log --reverse --branches --since=$(if [[ "Mon" == "$(date +%a)" ]]; then echo "last friday"; else echo "yesterday"; fi) --author=$(git config --get user.email) --format=format:'%C(cyan) %ad %C(yellow)%h %Creset %s %Cgreen%d' --date=local"
 
 	## Shortened 'New' Commands
 	fahr = !git fetch --all && git hard-reset
